new files and server

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -6,9 +6,10 @@
 
     <!-- Script js -->
     <script src="/socket.io/socket.io.js"></script>
+    <script src="../../index.js"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +17,8 @@
 </head>
 
 <body>
-    <h2 id="hello">COUCOU REMI</h2>
+    <h1 id="hello">Don't Collapse</h1>
+    <a href="lobby.html"><button id="button_play">Jouer</button></a>
 </body>
 
 <script>
