new modal system + better file architecture

--- a/index.html
+++ b/index.html
@@ -19,18 +19,15 @@
     <div id="top">
         <div class="containers">
             <div class="progress-container">
-                <div class="progress"></div>
-                <div class="text">Social</div>
+                Social
             </div>
 
             <div class="progress-container">
-                <div class="progress"></div>
-                <div class="text">Economic</div>
+                Economic
             </div>
 
             <div class="progress-container">
-                <div class="progress"></div>
-                <div class="text">Ecologic</div>
+                Ecologic
             </div>
         </div>
 
@@ -39,9 +36,8 @@
     </div>
 
 
-    <aside id="modal1" class="modal">
 
-        <!-- Modal content -->
+    <dialog class="modal" id="modal1">
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2 id="title-modal">Bienvenue dans le shop !</h2>
@@ -99,7 +95,7 @@
                 </table>
             </div>
         </div>
-    </aside>
+    </dialog>
 
     <script src="./js/main.js" type="module"></script>
 </body>
