--- a/index.html
+++ b/index.html
@@ -18,17 +18,9 @@
     <!-- Progress Bar -->
     <div id="top">
         <div class="containers">
-            <div class="progress-container">
-                Social
-            </div>
-
-            <div class="progress-container">
-                Economic
-            </div>
-
-            <div class="progress-container">
-                Ecologic
-            </div>
+            <div class="progress-container">Social</div>
+            <div class="progress-container">Economic</div>
+            <div class="progress-container">Ecologic</div>
         </div>
 
         <!-- Modal Shop -->
@@ -42,58 +34,37 @@
             <span class="close">&times;</span>
             <h2 id="title-modal">Bienvenue dans le shop !</h2>
 
+            <div id="shop">
+                <div id="main-title" class="rubric">
+                    <div class="clickable selected" id="ressources">Ressources</div>
+                    <div class="clickable" id="personnel">Personnel</div>
+                    <div class="clickable" id="neuf">Neuf</div>
+                    <div class="clickable" id="occasion">Occasion</div>
+                </div>
 
-            <div id="switch_shop">
-                <span id="machine_link" class="selected">Machines</span>
-                <span id="ressource_link">Ressources</span>
-                <span id="personnel_link">Personnel</span>
+                <div id="supplier" class="rubric">
+                    <!-- ! DANS JS -->
+
+                    <div class="clickable">SUP 1</div>
+                    <div class="clickable">SUP 2</div>
+                    <div class="clickable">SUP 3</div>
+                    <div class="clickable">SUP 4</div>
+                </div>
+
+                <div id="left-page" class="rubric">
+                    <div class="clickable">ITEM 1</div>
+                    <div class="clickable">ITEM 2</div>
+                </div>
+
+                <div id="right-page" class="rubric">
+                    <div class="clickable">ITEM 3</div>
+                    <div class="clickable">ITEM 4</div>
+                </div>
             </div>
 
-            <div class="shop_elem" id="machine_shop">
-                <h1>Machines</h1>
-                <table>
-                    <thead>
-                        <tr>
-                            <td>Machine</td>
-                            <td>Price</td>
-                        </tr>
-                    </thead>
-                    <tbody id="mach_tab">
 
-                    </tbody>
-                </table>
-            </div>
 
-            <div class="shop_elem" id="resources_shop" style="display: none;">
-                <h1>Ressources</h1>
-                <table>
-                    <thead>
-                        <tr>
-                            <td>Type</td>
-                            <td>Price</td>
-                        </tr>
-                    </thead>
-                    <tbody id="ress_tab">
 
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="shop_elem" id="personnel_shop" style="display: none;">
-                <h1>Personnel</h1>
-                <table>
-                    <thead>
-                        <tr>
-                            <td>Personne</td>
-                            <td>Age</td>
-                            <td>rendement</td>
-                        </tr>
-                    </thead>
-                    <tbody id="pers_tab">
-
-                    </tbody>
-                </table>
-            </div>
         </div>
     </dialog>
 
