--- a/index.html
+++ b/index.html
@@ -36,29 +36,27 @@
 
             <div id="shop">
                 <div id="main-title" class="rubric">
-                    <div class="clickable selected" id="ressources">Ressources</div>
-                    <div class="clickable" id="personnel">Personnel</div>
-                    <div class="clickable" id="neuf">Neuf</div>
-                    <div class="clickable" id="occasion">Occasion</div>
+                    <div class="elem1 clickable" id="ressources">Ressources</div>
+                    <div class="elem2 clickable" id="personnel">Personnel</div>
+                    <div class="elem3 clickable" id="neuf">Neuf</div>
+                    <div class="elem4 clickable" id="occasion">Occasion</div>
                 </div>
 
                 <div id="supplier" class="rubric">
-                    <!-- ! DANS JS -->
-
-                    <div class="clickable">SUP 1</div>
-                    <div class="clickable">SUP 2</div>
-                    <div class="clickable">SUP 3</div>
-                    <div class="clickable">SUP 4</div>
+                    <div class="elem1 clickable"></div>
+                    <div class="elem2 clickable"></div>
+                    <div class="elem3 clickable"></div>
+                    <div class="elem4 clickable"></div>
                 </div>
 
                 <div id="left-page" class="rubric">
-                    <div class="clickable">ITEM 1</div>
-                    <div class="clickable">ITEM 2</div>
+                    <div class="elem1 clickable"></div>
+                    <div class="elem2 clickable"></div>
                 </div>
 
                 <div id="right-page" class="rubric">
-                    <div class="clickable">ITEM 3</div>
-                    <div class="clickable">ITEM 4</div>
+                    <div class="elem3 clickable"></div>
+                    <div class="elem4 clickable"></div>
                 </div>
             </div>
 
