Simplification de tous les fichiers en un

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
             <div id="shop">
                 <div id="main-title" class="rubric">
-                    <div class="elem1 clickable" id="ressources">Ressources</div>
-                    <div class="elem2 clickable" id="personnel">Personnel</div>
-                    <div class="elem3 clickable" id="neuf">Neuf</div>
-                    <div class="elem4 clickable" id="occasion">Occasion</div>
+                    <div class="elem1 clickable" id="0">Ressources</div>
+                    <div class="elem2 clickable" id="1">Personnel</div>
+                    <div class="elem3 clickable" id="2">Neuf</div>
+                    <div class="elem4 clickable" id="3">Occasion</div>
                 </div>
 
                 <div id="supplier" class="rubric">
