shop working in front

--- a/index.html
+++ b/index.html
@@ -36,27 +36,153 @@
 
             <div id="shop">
                 <div id="main-title" class="rubric">
-                    <div class="elem1 clickable" id="0">Ressources</div>
-                    <div class="elem2 clickable" id="1">Personnel</div>
-                    <div class="elem3 clickable" id="2">Neuf</div>
-                    <div class="elem4 clickable" id="3">Occasion</div>
+                    <div class="top1 clickable selected">Ressources</div>
+                    <div class="top2 clickable">Personnel</div>
+                    <div class="top3 clickable">Neuf</div>
+                    <div class="top4 clickable">Occasion</div>
                 </div>
 
                 <div id="supplier" class="rubric">
-                    <div class="elem1 clickable"></div>
-                    <div class="elem2 clickable"></div>
-                    <div class="elem3 clickable"></div>
-                    <div class="elem4 clickable"></div>
+                    <div class="elec clickable selected" style="display:block;">Électricité</div>
+                    <div class="eau clickable" style="display:block;">Eau</div>
+                    <div class="carton clickable" style="display:block;">Cartons</div>
+                    <div class="etain clickable" style="display:block;">Étain - Quincaillerie</div>
+
+                    <div class="inge clickable" style="display: none;">Ingénieur</div>
+                    <div class="super clickable" style="display: none;">Superviseur</div>
+                    <div class="maint clickable" style="display: none;">Maintenance</div>
+                    <div class="menage clickable" style="display: none;">Ménage</div>
+
+                    <div class="manix clickable" style="display: none;">Manix 2</div>
+                    <div class="droit clickable" style="display: none;">Droit Ô But</div>
+                    <div class="braz clickable" style="display: none;">Braz'Air'Eau</div>
+                    <div class="tesla clickable" style="display: none;">Teslassemblage</div>
+
+                    <div class="own clickable" style="display: none;">Mes occasions</div>
+                    <div class="j1 clickable" style="display: none;"></div>
+                    <div class="j2 clickable" style="display: none;"></div>
+                    <div class="j3 clickable" style="display: none;"></div>
                 </div>
 
+
+                <!-- ----------------------------------------------------------------------- -->
+                <!--                               Page Gauche                               -->
+                <!-- ----------------------------------------------------------------------- -->
                 <div id="left-page" class="rubric">
-                    <div class="elem1 clickable"></div>
-                    <div class="elem2 clickable"></div>
+                    <!-- ----------------------------- Ressources ------------------------------ -->
+                    <div class="elec clickable" style="display:block;">Coup de Foudre</div>
+                    <div class="elec clickable" style="display:block;">Électricité d'Euler</div>
+
+                    <div class="eau clickable" style="display: none;">Hâche 2 Eaux</div>
+                    <div class="eau clickable" style="display: none;">Électricité d'Euler</div>
+
+                    <div class="cartons clickable" style="display: none;">Jean Balle</div>
+                    <div class="cartons clickable" style="display: none;">Toutânkharton</div>
+
+                    <div class="etain clickable" style="display: none;">Casto là bas</div>
+                    <div class="etain clickable" style="display: none;">Quincaillepleure</div>
+
+                    <!-- ------------------------------ Personnel ------------------------------ -->
+
+                    <div class="inge clickable" style="display: none;">Ingénieur 1</div>
+                    <div class="inge clickable" style="display: none;">Ingénieur 2</div>
+
+                    <div class="super clickable" style="display: none;">Superviseur 1</div>
+                    <div class="super clickable" style="display: none;">Superviseur 2</div>
+
+                    <div class="maint clickable" style="display: none;">Maintenance 1</div>
+                    <div class="maint clickable" style="display: none;">Maintenance 2</div>
+
+                    <div class="menage clickable" style="display: none;">Ménage 1</div>
+                    <div class="menage clickable" style="display: none;">Ménage 2</div>
+
+                    <!-- -------------------------------- Neuf --------------------------------- -->
+                    <div class="manix clickable" style="display: none;">Poste à souder <br> Niveau 1</div>
+                    <div class="manix clickable" style="display: none;">Assembleur mécanique <br> Niveau 1</div>
+
+                    <div class="droit clickable" style="display: none;">Poste à souder <br> Niveau 2</div>
+                    <div class="droit clickable" style="display: none;">Assembleur mécanique <br> Niveau 2</div>
+
+                    <div class="braz clickable" style="display: none;">Poste à souder <br> Niveau 3</div>
+                    <div class="braz clickable" style="display: none;">Assembleur mécanique <br> Niveau 3</div>
+
+                    <div class="tesla clickable" style="display: none;">Poste à souder <br> Niveau 4</div>
+                    <div class="tesla clickable" style="display: none;">Assembleur mécanique <br> Niveau 4</div>
+
+                    <!-- ------------------------------ Occasions ------------------------------ -->
+
+                    <div class="own clickable" style="display: none;">Rien n'est à vendre<br>pour le moment</div>
+                    <div class="own clickable" style="display: none;">Rien n'est à vendre<br>pour le moment</div>
+
+                    <div class="j1 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
+                    <div class="j1 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
+
+                    <div class="j2 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
+                    <div class="j2 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
+
+                    <div class="j3 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
+                    <div class="j3 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
                 </div>
 
+                <!-- ----------------------------------------------------------------------- -->
+                <!--                               Page Droite                               -->
+                <!-- ----------------------------------------------------------------------- -->
                 <div id="right-page" class="rubric">
-                    <div class="elem3 clickable"></div>
-                    <div class="elem4 clickable"></div>
+                    <!-- ----------------------------- Ressources ------------------------------ -->
+
+                    <div class="elec clickable" style="display:block;">Petit Tonerre</div>
+                    <div class="elec clickable" style="display:block;">Durexcel</div>
+
+                    <div class="eau clickable" style="display: none;">Rheaum</div>
+                    <div class="eau clickable" style="display: none;">Cri'Staline</div>
+
+                    <div class="cartons clickable" style="display: none;">Mine Carton</div>
+                    <div class="cartons clickable" style="display: none;">Scotch Willski</div>
+
+                    <div class="etain clickable" style="display: none;">P'étain clou</div>
+                    <div class="etain clickable" style="display: none;">Le Roi Merlin</div>
+
+                    <!-- ------------------------------ Personnel ------------------------------ -->
+
+                    <div class="inge clickable" style="display: none;">Ingénieur 3</div>
+                    <div class="inge clickable" style="display: none;">Ingénieur 4</div>
+
+                    <div class="super clickable" style="display: none;">Superviseur 3</div>
+                    <div class="super clickable" style="display: none;">Superviseur 4</div>
+
+                    <div class="maint clickable" style="display: none;">Maintenance 3</div>
+                    <div class="maint clickable" style="display: none;">Maintenance 4</div>
+
+                    <div class="menage clickable" style="display: none;">Ménage 3</div>
+                    <div class="menage clickable" style="display: none;">Ménage 4</div>
+
+                    <!-- -------------------------------- Neuf --------------------------------- -->
+
+                    <div class="manix clickable" style="display: none;">Assembleur de précision <br> Niveau 1</div>
+                    <div class="manix clickable" style="display: none;">Assembleur général <br> Niveau 1</div>
+
+                    <div class="droit clickable" style="display: none;">Assembleur de précision <br> Niveau 2</div>
+                    <div class="droit clickable" style="display: none;">Assembleur général <br> Niveau 2</div>
+
+                    <div class="braz clickable" style="display: none;">Assembleur de précision <br> Niveau 3</div>
+                    <div class="braz clickable" style="display: none;">Assembleur général <br> Niveau 3</div>
+
+                    <div class="tesla clickable" style="display: none;">Assembleur de précision <br> Niveau 4</div>
+                    <div class="tesla clickable" style="display: none;">Assembleur général <br> Niveau 4</div>
+
+                    <!-- ------------------------------ Occasions ------------------------------ -->
+
+                    <div class="own clickable" style="display: none;">Rien n'est à vendre<br>pour le moment</div>
+                    <div class="own clickable" style="display: none;">Rien n'est à vendre<br>pour le moment</div>
+
+                    <div class="j1 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
+                    <div class="j1 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
+
+                    <div class="j2 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
+                    <div class="j2 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
+
+                    <div class="j3 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
+                    <div class="j3 clickable" style="display: none;">Rien n'est à acheter<br>pour le moment</div>
                 </div>
             </div>
 
