fix occasion in shop

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="braz clickable" style="display: none;">Braz'Air'Eau</div>
                     <div class="tesla clickable" style="display: none;">Teslassemblage</div>
 
-                    <div class="own clickable" style="display: none;">Mes occasions</div>
+                    <div class="occaz clickable" style="display: none;">Mes occasions</div>
                     <!-- <div class="j1 clickable" style="display: none;"></div>
                     <div class="j2 clickable" style="display: none;"></div>
                     <div class="j3 clickable" style="display: none;"></div> -->
